src/test/ui/try-trait/try-on-option-in-result-method-2021.stderr
error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> $DIR/try-on-option-in-result-method-2021.rs:14:5
   |
LL | / fn foo() -> Result<(), Tricky> {
LL | |     None?;
   | |     ^^^^^ cannot use the `?` operator in a function that returns `Result<(), Tricky>`
LL | |     Ok(())
LL | | }
   | |_- this function should return `Result` or `Option` to accept `?`
   |
   = help: the trait `FromResidual<Option<!>>` is not implemented for `Result<(), Tricky>`
   = note: required by `from_residual`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
